--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,18 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #ff0070;
+  --menu-color: #ff0070;
+  --menu-frame: rgb(225, 0, 112, 0.4);
+  --accent-text-color: #000028;
+  --text-color: #f1b2ce;
+  --link-shadow-color: #ff0070;
+  --main-headline: #db00ff;
+  --topic-color: #ff0070;
+  --background-image: url("../images/cover-image-dark.png");
+  --background-reserve: #ffeef6;
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-dark .header-bg-decor {
+  display: flex;
 }
