--- a/styles/light.css
+++ b/styles/light.css
@@ -8,9 +8,56 @@
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
-  */
+  */  
+  --accent-color: #FF8DCB;
+  --menu-color: #353430;
+  --menu-frame: rgb(53, 52, 48, 0.4);
+  --accent-text-color: #000028;
+  --text-color: #353430;
+  --link-shadow-color: #FF8DCB;
+  --topic-color: #353430;
+  --main-headline: #FFC2E6;
+  --background-image: url("../images/cover-image-light.png");
+  --background-reserve: #000028;
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  --accent-color: #FF8DCB;
+  --menu-color: #353430;
+  --menu-frame: rgb(53, 52, 48, 0.4);
+  --accent-text-color: #000028;
+  --text-color: #353430;
+  --link-shadow-color: #FF8DCB;
+  --topic-color: #353430;
+  --main-headline: #FFC2E6;
+  --background-image: url("../images/cover-image-light.png");
+  --background-reserve: #000028;
+}
+
+.theme-light .header-bg-decor {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    /* сохраните этот селектор в приведённом виде.
+      Так стили написанные ниже будут иметь больший вес,
+      чем стили в медиазапросе предпочтений пользователя
+    */  
+    --accent-color: #FF8DCB;
+    --menu-color: #353430;
+    --menu-frame: rgb(53, 52, 48, 0.4);
+    --accent-text-color: #000028;
+    --text-color: #353430;
+    --link-shadow-color: #FF8DCB;
+    --topic-color: #353430;
+    --main-headline: #FFC2E6;
+    --background-image: url("../images/cover-image-light.png");
+    --background-reserve: #000028;
+  }
+
+  .header-bg-decor {
+    display: none;
+  }
 }
