--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,352 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  position: relative;
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  min-width: 375px;
+  max-width: 1024px;
+  font-family: "IBM Plex mono", sans-serif;
+  font-size: 18px;
+  background-color: var(--background-reserve);
+  background-image: var(--background-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1.5fr 1fr;
+  gap: 10px;
+  padding: var(--indents) var(--indents) 0;
+}
+
+.decorated-zone{
+  position: relative;
+  height: 100vh;
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: var(--indents);
+  right: var(--indents);
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--menu-color);
+  border-right: 1px solid var(--menu-color);
+  }
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  bottom: var(--indents);
+  left: var(--indents);
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--menu-color);
+  border-left: 1px solid var(--menu-color);
+}
+
+.header-bg-decor {
+  position: absolute;
+  top: var(--indents);
+  right: calc(9px + var(--indents));
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  gap: 10px;
+  color: #FF0070;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+.header-bg-decor::after {
+  content: "";
+  position: static;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  box-shadow:0 0 4px 2px #FF0070 ;
+  background: #FF0070;
+}
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: flex-end;
+  padding-bottom: 18px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-item {
+  text-decoration: none;
+}
+
+.header__theme-menu-button {
+  border: none;
+  padding-bottom: 4px;
+  color: var(--menu-color);
+  font-weight: normal;
+  line-height: 83%;
+  text-transform: lowercase;
+  background-color: transparent;
+  inline-size: 70px;
+  block-size: 26px;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--menu-frame);
+}
+
+.header__theme-menu-button:focus{
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--menu-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--menu-color);
+}
+
+.headline {
+  align-self: center;
+  padding-bottom: 8px;
+  color: var(--main-headline);
+  font-weight: bold;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 83%;
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.header-text {
+  align-self: flex-start;
+  max-height: min-content;
+}
+
+.title-decor {
+  color: var(--accent-text-color);
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23.4px;
+  background-color: var(--accent-color);
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap:  var(--section-indents);
+  padding: 40px var(--indents) 30px;
+}
+
+.section {
+  display: grid;
+  gap: 20px;
+}
+
+.card-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.section-topic {
+  color: var(--topic-color);
+  background-color: transparent;
+}
+
+.topic-card {
+  font-weight: normal;
+}
+
+.text-card {
+  color: var(--text-color);
+  font-weight: normal;
+  line-height: 23.4px;
+}
+
+.link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--link-shadow-color);
+}
+
+.link:hover {
+  border-bottom: 2px solid var(--text-color);
+}
+
+.link:focus {
+  outline: none;
+}
+
+.link:focus-visible {
+  border: 2px solid var(--text-color);
+}
+
+.gallery {
+  display: grid;
+  gap: var(--gallerty-indents);
+}
+
+.gallery__item {
+  margin: 0;
+  inline-size: 100%;
+}
+
+.gallery__image {
+  object-fit: cover;
+  inline-size: 100%;
+  block-size: 100%;
+  max-inline-size: 100%;
+}
+
+.footer {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  padding: var(--indents) var(--indents) 0;
+}
+
+.footrer-headline{
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+@media (width >= 768px){
+  :root {
+    --indents: 20px;
+    --section-indents: 80px;
+    --gallerty-indents: 20px;
+  }
+
+  .header {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 1fr 1fr;
+    padding-left: 0;
+  }
+
+  .header__theme-menu {
+    grid-column: 2;
+    grid-row: 1;
+    padding-bottom: 56px;
+  }
+
+  .headline {
+    grid-column: 1 / 3;
+    grid-row: 2;
+    padding-bottom: 18px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+  
+  .header-text{
+    grid-column: 2;
+    grid-row: 3;
+    margin-top: 28px;
+    margin-left: 5px;
+  }
+
+  .section {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .problema {
+    padding-top: 20px;
+  }
+
+  .reasons-list {
+    grid-column: 1 / 3;
+    grid-row: 2;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: min(25vw, 260px) min(30vw, 315px) min(41vw, 433px);
+    padding-top: 10px;
+  }
+
+  .gallery__item:nth-child(1) {
+    grid-column: 1 / 3;
+    grid-row: 1;
+  }
+
+  .gallery__item:nth-child(2) {
+    grid-column: 3 / 3;
+    grid-row: 1 / 3;
+  }
+
+  .gallery__item:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2 / 4;
+  }
+
+  .gallery__item:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .gallery__item:nth-child(5) {
+    grid-column: 2 / 4;
+    grid-row: 3;
+  }
+
+  .footer {
+    margin-top: 30px;
+    padding-bottom: 29vh;
+  }
+}
+
+@media (width >= 1024px) {
+  .header__theme-menu {
+    grid-column: 1 / 3;
+    grid-row: 1;
+    justify-self: center;
+    align-self: start;
+    padding-left: var(--indents);
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .header-text{
+    margin-top: 37px;
+  }
+
+  .section {
+    gap: 10px;
+  }
+
+  .reasons {
+    gap: 20px;
+  }
+  
+  .reasons > .card-list {
+    flex-direction: row;
+  }
+
+  .reasons .card {
+    inline-size: 33%;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: min(25vw, 260px) min(31vw, 315px) min(42vw, 433px);
+  }
+
+  .footer {
+    padding-bottom: 25vh;
+  }
 }
