Готово ко 2 ревью

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -17,3 +17,11 @@
   --section-indents: 50px;
   --gallerty-indents: 5px;
 }
+
+@media (width >= 768px) {
+  :root {
+    --indents: 20px;
+    --section-indents: 80px;
+    --gallerty-indents: 20px;
+  }
+}
