--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,11 @@
 
 .page {
   position: relative;
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   min-width: 375px;
   max-width: 1024px;
   font-family: "IBM Plex mono", sans-serif;
   font-size: 18px;
-  background-color: var(--background-reserve);
+  background-color: var(--background-reserve, #000028);
   background-image: var(--background-image);
   background-repeat: no-repeat;
   background-position: center;
@@ -28,24 +27,23 @@
   height: 100vh;
 }
 
-.decorated-zone::before {
+.decorated-zone::before, .decorated-zone::after {
   content: "";
   position: absolute;
+  width: 25px;
+  height: 25px;
+}
+
+.decorated-zone::before {
   top: var(--indents);
   right: var(--indents);
-  width: 25px;
-  height: 25px;
   border-top: 1px solid var(--menu-color);
   border-right: 1px solid var(--menu-color);
-  }
+}
 
 .decorated-zone::after {
-  content: "";
-  position: absolute;
   bottom: var(--indents);
   left: var(--indents);
-  width: 25px;
-  height: 25px;
   border-bottom: 1px solid var(--menu-color);
   border-left: 1px solid var(--menu-color);
 }
@@ -98,12 +96,13 @@
   line-height: 83%;
   text-transform: lowercase;
   background-color: transparent;
-  inline-size: 70px;
-  block-size: 26px;
+  min-width: 70px;
+  min-height: 26px;
+  cursor: pointer;
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--menu-frame);
+  outline: 1px solid var(--menu-frame);
 }
 
 .header__theme-menu-button:focus {
@@ -115,7 +114,7 @@
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--menu-color);
+  outline: 1px solid var(--menu-color);
 }
 
 .headline {
@@ -145,7 +144,7 @@
   display: flex;
   flex-direction: column;
   gap:  var(--section-indents);
-  padding: 40px var(--indents) 30px;
+  padding: 40px var(--indents);
 }
 
 .section {
@@ -186,7 +185,7 @@
 }
 
 .link:hover {
-  border-bottom: 2px solid var(--text-color);
+  border-bottom: 1px solid var(--text-color);
 }
 
 .link:focus {
@@ -194,7 +193,7 @@
 }
 
 .link:focus-visible {
-  border: 2px solid var(--text-color);
+  outline: 1px solid var(--text-color);
 }
 
 .gallery {
@@ -204,21 +203,19 @@
 
 .gallery__item {
   margin: 0;
-  inline-size: 100%;
 }
 
 .gallery__image {
   object-fit: cover;
-  inline-size: 100%;
   block-size: 100%;
-  max-inline-size: 100%;
+  inline-size: 100%;
 }
 
 .footer {
   display: grid;
   justify-items: center;
   align-items: center;
-  padding: var(--indents) var(--indents) 0;
+  padding: 0 var(--indents);
 }
 
 .footrer-headline {
@@ -226,13 +223,7 @@
 }
 
 @media (width >= 768px) {
-  :root {
-    --indents: 20px;
-    --section-indents: 80px;
-    --gallerty-indents: 20px;
-  }
-
-  .header {
+ .header {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr 1fr 1fr;
     padding-left: 0;
@@ -268,7 +259,6 @@
 
   .reasons-list {
     grid-column: 1 / 3;
-    grid-row: 2;
   }
 
   .gallery {
@@ -311,7 +301,6 @@
 @media (width >= 1024px) {
   .header__theme-menu {
     grid-column: 1 / 3;
-    grid-row: 1;
     justify-self: center;
     align-self: start;
     padding-left: var(--indents);
@@ -328,21 +317,14 @@
   .section {
     gap: 10px;
   }
-
-  .reasons {
-    gap: 20px;
-  }
   
-  .reasons > .card-list {
-    flex-direction: row;
-  }
-
-  .reasons .card {
-    inline-size: 33%;
+  .reasons-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding-top: 10px;
   }
 
   .gallery {
-    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: min(25vw, 260px) min(31vw, 315px) min(42vw, 433px);
   }
 
